--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-remark-responsive-iframe": "^1.4.16",
     "gatsby-remark-smartypants": "^1.4.10",
     "gatsby-source-filesystem": "^1.5.11",
+    "gatsby-transformer-javascript-static-exports": "^1.3.8",
     "gatsby-transformer-remark": "^1.7.26"
   },
   "keywords": [
