--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "gatsby-remark-smartypants": "^1.4.10",
     "gatsby-source-filesystem": "^1.5.11",
     "gatsby-transformer-javascript-static-exports": "^1.3.8",
-    "gatsby-transformer-remark": "^1.7.26"
+    "gatsby-transformer-remark": "^1.7.26",
+    "highlightjs": "^9.10.0",
+    "prismjs": "^1.10.0"
   },
   "keywords": [
     "gatsby"
