--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "gatsby-transformer-javascript-static-exports": "^1.3.8",
     "gatsby-transformer-remark": "^1.7.26",
     "highlightjs": "^9.10.0",
-    "prismjs": "^1.10.0"
+    "node-sass": "^4.8.3",
+    "prismjs": "^1.10.0",
+    "sharp": "^0.20.1"
   },
   "keywords": [
     "gatsby"
