--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "scripts": {
     "build": "gatsby build  --prefix-paths && gh-pages -d public",
     "develop": "gatsby develop",
+    "deploy": "gatsby build && gh-pages -b master -d public",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
