--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby-plugin-google-fonts": "0.0.3",
     "gatsby-plugin-react-helmet": "^1.0.8",
     "gatsby-plugin-sass": "^1.0.15",
+    "gatsby-plugin-sharp": "^1.6.41",
     "gatsby-remark-copy-linked-files": "^1.5.25",
     "gatsby-remark-images": "^1.5.36",
     "gatsby-remark-prismjs": "^1.2.11",
@@ -19,6 +20,7 @@
     "gatsby-source-filesystem": "^1.5.11",
     "gatsby-transformer-javascript-static-exports": "^1.3.8",
     "gatsby-transformer-remark": "^1.7.26",
+    "gatsby-transformer-sharp": "^1.6.22",
     "highlightjs": "^9.10.0",
     "node-sass": "^4.8.3",
     "prismjs": "^1.10.0",
