--- a/package.json
+++ b/package.json
@@ -1,47 +1,52 @@
 {
-  "name": "gatsby-starter-default",
-  "description": "Gatsby default starter",
-  "version": "1.0.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
-  "dependencies": {
-    "bootstrap": "^4.0.0-beta.3",
-    "font-awesome": "^4.7.0",
-    "gatsby": "^1.9.145",
-    "gatsby-link": "^1.6.32",
-    "gatsby-plugin-google-analytics": "^1.0.31",
-    "gatsby-plugin-google-fonts": "0.0.3",
-    "gatsby-plugin-react-helmet": "^1.0.8",
-    "gatsby-plugin-sass": "^1.0.15",
-    "gatsby-plugin-sharp": "^1.6.41",
-    "gatsby-remark-copy-linked-files": "^1.5.25",
-    "gatsby-remark-images": "^1.5.36",
-    "gatsby-remark-prismjs": "^1.2.11",
-    "gatsby-remark-responsive-iframe": "^1.4.16",
-    "gatsby-remark-smartypants": "^1.4.10",
-    "gatsby-source-filesystem": "^1.5.11",
-    "gatsby-source-medium": "^1.0.14",
-    "gatsby-transformer-javascript-static-exports": "^1.3.8",
-    "gatsby-transformer-remark": "^1.7.26",
-    "gatsby-transformer-sharp": "^1.6.22",
-    "highlightjs": "^9.10.0",
-    "node-sass": "^4.8.3",
-    "prismjs": "^1.10.0",
-    "sharp": "^0.20.1"
-  },
-  "keywords": [
-    "gatsby"
-  ],
-  "license": "MIT",
-  "main": "n/a",
-  "scripts": {
-    "build": "gatsby build  --prefix-paths && gh-pages -d public",
-    "develop": "gatsby develop",
-    "deploy": "gatsby build && gh-pages -b master -d public",
-    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "devDependencies": {
-    "gh-pages": "^1.1.0",
-    "prettier": "^1.9.2"
-  }
+    "name": "gatsby-starter-default",
+    "description": "Gatsby default starter",
+    "version": "1.0.0",
+    "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+    "dependencies": {
+        "@fortawesome/fontawesome": "^1.1.8",
+        "@fortawesome/fontawesome-free-brands": "^5.0.13",
+        "@fortawesome/fontawesome-free-solid": "^5.0.13",
+        "@fortawesome/react-fontawesome": "^0.0.20",
+        "bootstrap": "^4.0.0-beta.3",
+        "detect-port": "^1.2.3",
+        "gatsby": "^1.9.145",
+        "gatsby-link": "^1.6.32",
+        "gatsby-plugin-google-analytics": "^1.0.31",
+        "gatsby-plugin-google-fonts": "0.0.3",
+        "gatsby-plugin-react-helmet": "^1.0.8",
+        "gatsby-plugin-sass": "^1.0.15",
+        "gatsby-plugin-sharp": "^1.6.41",
+        "gatsby-remark-copy-linked-files": "^1.5.25",
+        "gatsby-remark-images": "^1.5.36",
+        "gatsby-remark-prismjs": "^1.2.11",
+        "gatsby-remark-responsive-iframe": "^1.4.16",
+        "gatsby-remark-smartypants": "^1.4.10",
+        "gatsby-source-filesystem": "^1.5.11",
+        "gatsby-source-medium": "^1.0.14",
+        "gatsby-transformer-javascript-static-exports": "^1.3.8",
+        "gatsby-transformer-remark": "^1.7.26",
+        "gatsby-transformer-sharp": "^1.6.22",
+        "highlightjs": "^9.10.0",
+        "node-sass": "^4.8.3",
+        "prismjs": "^1.10.0",
+        "react": "^16.3.2",
+        "sharp": "^0.20.1"
+    },
+    "keywords": [
+        "gatsby"
+    ],
+    "license": "MIT",
+    "main": "n/a",
+    "scripts": {
+        "build": "gatsby build  --prefix-paths && gh-pages -d public",
+        "develop": "gatsby develop",
+        "deploy": "gatsby build && gh-pages -b master -d public",
+        "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\"",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "devDependencies": {
+        "gh-pages": "^1.1.0",
+        "prettier": "^1.9.2"
+    }
 }
